--- a/webapp.Data/appsettings.json
+++ b/webapp.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "webappSolutionDb": "Server=.;Database=webappSolution;Trusted_Connection=True;"
+    "webappSolutionDb": "Server=.;Database=ShopBan;Trusted_Connection=True;"
   }
 }
