--- a/webapp.Application/webapp.Application.csproj
+++ b/webapp.Application/webapp.Application.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Webapp.Data\Webapp.Data.csproj" />
+    <ProjectReference Include="..\Webapp.Utilities\Webapp.Utilities.csproj" />
+  </ItemGroup>
 
 </Project>
