--- a/RacoShop.Application/RacoShop.Application.csproj
+++ b/RacoShop.Application/RacoShop.Application.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RacoShop.Data\RacoShop.Data.csproj" />
     <ProjectReference Include="..\RacoShop.Utilities\RacoShop.Utilities.csproj" />
+    <ProjectReference Include="..\RacoShop.ViewModel\RacoShop.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
